# jpath

./: .gitignore  CONTRIBUTING.md  PRD.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/basic/: queries.jmes  queries.jsonpath  sample.json
src/jpath/: __init__.py  __main__.py  cli.py  formatter.py  jmespath_engine.py  jsonpath_engine.py  parser.py  schema.py  validator.py
tests/: conftest.py  test_cli.py  test_formatter.py  test_jmespath_engine.py  test_jsonpath_engine.py  test_parser.py  test_schema.py  test_validator.py
